# ai-ml-dsa-journey

DSA/: 5. Stack_LIFO.ipynb  6. Queue_FIFO.ipynb  7. Some additional data structures.ipynb.ipynb
Mlops Plumbing/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
Mlops Plumbing/.github/workflows/: cd.yml  ci.yml
Mlops Plumbing/configs/: default.yaml
Mlops Plumbing/notebooks/: 01_eda.ipynb
Mlops Plumbing/src/: __init__.py
Mlops Plumbing/src/data/: ingestion.py  preprocessing.py
Mlops Plumbing/src/evaluation/: __init__.py  metrics.py
Mlops Plumbing/src/features/: __init__.py  engineering.py
Mlops Plumbing/src/models/: __init__.py  base.py  trainer.py
Mlops Plumbing/src/serving/: __init__.py  api.py
Mlops Plumbing/tests/: conftest.py  test_api.py  test_features.py  test_preprocessing.py
Short prep (2 months)/: 1. Python.ipynb  2. Numpy.ipynb  3. Pandas.ipynb  4. SQL.ipynb  5. API.ipynb  6. Visualization.ipynb  7. Calculus.ipynb  9. Probability.ipynb
dsa/: 1. Singly_Linked_List_with_head.ipynb  2. Singly_Linked_List_With_Head_Tail.ipynb  3. Circular_Linked_List.ipynb  4. Doubly_Linked_List.ipynb  README.md
