[tool.poetry]
name = "ml-project-template"
version = "0.1.0"
description = "End-to-end machine learning project template"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = ">=2.2.0"
scikit-learn = ">=1.4.0"
pandas = ">=2.2.0"
numpy = ">=1.26.0"
mlflow = ">=2.13.0"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
hydra-core = ">=1.3.2"
dvc = { version = ">=3.50.0", extras = ["s3"] }
plotly = ">=5.22.0"
omegaconf = ">=2.3.0"
pydantic = ">=2.7.0"
requests = ">=2.31.0"
joblib = ">=1.4.0"
matplotlib = ">=3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = ">=3.7.0"
pandas-stubs = ">=2.2.0"
types-requests = ">=2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["src/serving/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
